* Update versions, downgrade to JAVA-8